# nav-frontier-go2w-v3

./: .dockerignore  .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  frontier_remote.rviz  frontier_remote_3d.rviz  play_frontier_bag.bash  setup_bag_replay.bash  setup_remote_viz.bash  start_remote_rviz.bash  start_remote_rviz_3d.bash  start_replay_rviz.bash  start_replay_rviz_3d.bash
catmux/: frontier_explore.yaml
config/: cyclonedds.xml
docker/: Dockerfile  entrypoint.sh  run.sh
docs/: architecture.md  frontier-selector.md  remote-visualization.md  result-recording.md  topics.md  troubleshooting.md  tuning-parameters.md  velocity-bridge.md  vendored-upstreams.md
humble_ws/src/direct_lidar_inertial_odometry/cfg/: dlio.yaml  params.yaml
humble_ws/src/direct_lidar_inertial_odometry/include/dlio/: odom.h
humble_ws/src/direct_lidar_inertial_odometry/launch/: dlio.launch.py  dlio.rviz
humble_ws/src/direct_lidar_inertial_odometry/src/dlio/: odom.cc
humble_ws/src/go2w_imu_publisher/: CMakeLists.txt  LICENSE  README.md  package.xml
humble_ws/src/go2w_imu_publisher/src/: imu_publisher.cpp
humble_ws/src/go2w_slam_toolbox_bringup/: CMakeLists.txt  package.xml
humble_ws/src/go2w_slam_toolbox_bringup/config/: go2w_slam_toolbox.rviz  pointcloud_to_laserscan.yaml  slam_toolbox.yaml
humble_ws/src/go2w_slam_toolbox_bringup/launch/: go2w_hesai_slam_toolbox.launch.py  pointcloud_to_laserscan.launch.py  rviz.launch.py  slam_toolbox.launch.py
humble_ws/src/hesai_lidar/: CMakeLists.txt  README.md  package.xml
humble_ws/src/hesai_lidar/launch/: hesai_lidar_launch.py
humble_ws/src/hesai_lidar/msg/: PandarScan.msg
humble_ws/src/hesai_lidar/src/: main_ros2.cc
humble_ws/src/hesai_lidar/src/HesaiLidar_General_SDK/src/PandarGeneralRaw/include/: version.h
humble_ws/src/hesai_lidar/src/HesaiLidar_General_SDK/src/PandarGeneralRaw/include/pandarGeneral/: point_types.h
humble_ws/src/hesai_lidar/src/HesaiLidar_General_SDK/src/PandarGeneralRaw/src/: pandarGeneral_internal.cc  pandarGeneral_internal.h
humble_ws/src/nav_frontier_go2w_bridge/: package.xml  setup.cfg  setup.py
humble_ws/src/nav_frontier_go2w_bridge/config/: velocity_bridge.yaml
humble_ws/src/nav_frontier_go2w_bridge/launch/: velocity_bridge.launch.py
humble_ws/src/nav_frontier_go2w_bridge/nav_frontier_go2w_bridge/: clamping.py  velocity_bridge_node.py
humble_ws/src/nav_frontier_go2w_bridge/test/: test_clamping.py
humble_ws/src/nav_frontier_go2w_bringup/: CMakeLists.txt  package.xml
humble_ws/src/nav_frontier_go2w_bringup/launch/: bringup.launch.py
humble_ws/src/nav_frontier_go2w_frontier/: package.xml  setup.cfg  setup.py
humble_ws/src/nav_frontier_go2w_frontier/config/: frontier_selector.yaml
humble_ws/src/nav_frontier_go2w_frontier/launch/: frontier_selector.launch.py
humble_ws/src/nav_frontier_go2w_frontier/nav_frontier_go2w_frontier/: frontier_core.py  frontier_selector_node.py
humble_ws/src/nav_frontier_go2w_frontier/test/: test_frontier_core.py
humble_ws/src/nav_frontier_go2w_planner/: package.xml  setup.cfg  setup.py
humble_ws/src/nav_frontier_go2w_planner/config/: frontier_goal_executor.yaml  map_viz_layers.yaml  mppi_trajectory_lines.yaml  nav2_params.yaml
humble_ws/src/nav_frontier_go2w_planner/launch/: frontier_goal_executor.launch.py  frontier_planner.launch.py  nav2_navigation.launch.py
humble_ws/src/nav_frontier_go2w_planner/nav_frontier_go2w_planner/: frontier_goal_executor.py  goal_policy.py  map_viz_layers.py  mppi_trajectory_lines.py
humble_ws/src/nav_frontier_go2w_planner/test/: test_goal_policy.py  test_humble_runtime_compat.py  test_nav2_mppi_config.py
scripts/: build_image.sh  enter.sh  smoke_test.sh
