<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_frontier_go2w_bridge</name>
  <version>0.1.0</version>
  <description>
    Bridge that translates /cmd_vel (geometry_msgs/Twist) into unitree_api/Request
    messages on /api/sport/request at a configurable rate (default 50 Hz). Performs
    safety clamping on linear/angular velocities, applies a watchdog that emits
    StopMove on /cmd_vel silence, and supports a dry-run mode for safe bring-up.
  </description>

  <maintainer email="67k.tanaka@gmail.com">Koki Tanaka</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>unitree_api</depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
