<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_frontier_go2w_bringup</name>
  <version>0.1.0</version>
  <description>
    Top-level launch composing the full nav-frontier-go2w-v3 stack:
    Hesai LiDAR + IMU publisher + D-LIO + pointcloud_to_laserscan +
    slam_toolbox + frontier selector + Nav2 (NavFn + MPPI) + velocity
    bridge, plus the static TFs for the Go2W sensor mounting.
  </description>

  <maintainer email="67k.tanaka@gmail.com">Koki Tanaka</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hesai_lidar</exec_depend>
  <exec_depend>go2w_imu_publisher</exec_depend>
  <exec_depend>direct_lidar_inertial_odometry</exec_depend>
  <exec_depend>go2w_slam_toolbox_bringup</exec_depend>
  <exec_depend>nav_frontier_go2w_frontier</exec_depend>
  <exec_depend>nav_frontier_go2w_planner</exec_depend>
  <exec_depend>nav_frontier_go2w_bridge</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_storage_default_plugins</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
